--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -80,15 +80,15 @@
       <h2>Public Policy</h2>
       <ul class="essay-list">
         <li>
-          <a href="essays/Combating_Sextortion.pdf" target="_blank">Combating Sextortion</a>
+          <a href="essays/https://zmeagor.github.io/Portfolio/essays/Combating_Sextortion.pdf" target="_blank">Combating Sextortion</a>
           <p>What is sexual extortion and how can public policy address this issue?</p>
         </li>
         <li>
-          <a href="essays/Public_Transportation_South_LA.pdf" target="_blank">Memorandum: Improving Public Transportation in South Los Angeles</a>
+          <a href="essays/https://zmeagor.github.io/Portfolio/essays/Public_Transportation_South_LA.pdf" target="_blank">Memorandum: Improving Public Transportation in South Los Angeles</a>
           <p>Here I outline the importance of public transportation and propose an underground subway line through the Vermont Corridor of South Los Angeles.</p>
         </li>
         <li>
-          <a href="essays/Urban_Renewal_Photography.pdf" target="_blank">Photography of Urban Renewal in Bunker Hill and Chavez Ravine</a>
+          <a href="essays/https://zmeagor.github.io/Portfolio/essays/Urban_Renewal_Photography.pdf" target="_blank">Photography of Urban Renewal in Bunker Hill and Chavez Ravine</a>
           <p>How did visual and artistic culture inform the urban planning of Los Angeles during the mid-twentieth century?</p>
         </li>
       </ul>
@@ -98,11 +98,11 @@
       <h2>Law</h2>
       <ul class="essay-list">
         <li>
-          <a href="essays/Common_Law_Rulemaking.pdf" target="_blank">Standards of Rulemaking in the Common Law</a>
+          <a href="essays/https://zmeagor.github.io/Portfolio/essays/Common_Law_Rulemaking.pdf" target="_blank">Standards of Rulemaking in the Common Law</a>
           <p>Is the common law a system of rules? Does judicial decisionmaking have standards?</p>
         </li>
         <li>
-          <a href="essays/Law_and_Morality.pdf" target="_blank">Law and Morality</a>
+          <a href="essays/https://zmeagor.github.io/Portfolio/essays/Law_and_Morality.pdf" target="_blank">Law and Morality</a>
           <p>Are law and morality necessarily intertwined? Is it true that "an unjust law is no law at all"?</p>
         </li>
       </ul>
@@ -112,11 +112,11 @@
       <h2>Philosophy of Physics</h2>
       <ul class="essay-list">
         <li>
-          <a href="essays/Incongruent_Counterparts.pdf" target="_blank">Incongruent Counterparts and Absolute Space</a>
+          <a href="essays/https://zmeagor.github.io/Portfolio/essays/Incongruent_Counterparts.pdf" target="_blank">Incongruent Counterparts and Absolute Space</a>
           <p>Here I analyze Kant's famous argument postulating the existence of absolute space. Is a hand in empty space either a right or left hand?</p>
         </li>
         <li>
-          <a href="essays/Relationism_vs_Substantivalism.pdf" target="_blank">Relationism vs. Substantivalism</a>
+          <a href="essays/https://zmeagor.github.io/Portfolio/essays/Relationism_vs_Substantivalism.pdf" target="_blank">Relationism vs. Substantivalism</a>
           <p>Here I analyze Newton's "yolked globes" argument for absolute motion and rest. I critique Ernst Mach's counterargument in which he reframes the yolked globes argument from a relationist perspective.</p>
         </li>
       </ul>
