--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -72,8 +72,7 @@
 <body>
   <header>
     <h1>Zachary Meagor</h1>
-    <p>Collection of my writings and research.
-    I am an undergraduate at the University of Southern California studying public policy on the pre-law track. I hope to go to law school and practice municipal law. Topics of interest include public policy, political science, law, urban planning, philosophy, and art.</p>
+    <p>About me: This is a collection of my writings and research. I am an undergraduate at the University of Southern California studying public policy on the pre-law track. I hope to go to law school and practice municipal law. Topics of interest include public policy, political science, law, urban planning, philosophy, and art.</p>
   </header>
   
   <main>
