--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -80,6 +80,10 @@
       <h2>Public Policy</h2>
       <ul class="essay-list">
         <li>
+          <a href="essays/HCD 1- CRA and Fair Lending Policy" target="_blank">Community Reinvestment Act and Fair Lending Policies</a>
+          <p>What is the Community Reinvestment Act and Fair Lending Policy? How are they enforced and are they effective?</p>
+        </li>
+        <li>
           <a href="essays/PPD342- Policy Program Final Paper - Google Docs.pdf" target="_blank">Combating Sextortion</a>
           <p>What is sexual extortion and how can public policy address this issue?</p>
         </li>
