--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -80,8 +80,12 @@
       <h2>Public Policy</h2>
       <ul class="essay-list">
         <li>
-          <a href="essays/HCD 1- CRA and Fair Lending Policy" target="_blank">Community Reinvestment Act and Fair Lending Policies</a>
-          <p>What is the Community Reinvestment Act and Fair Lending Policy? How are they enforced and are they effective?</p>
+          <a href="essays/HCD 1- CRA and Fair Lending Policy.pdf" target="_blank">Community Reinvestment Act and Fair Lending Policies</a>
+          <p>What is the Community Reinvestment Act and Fair Lending Policy? How are these policies enforced and are they effective?</p>
+        </li>
+        <li>
+          <a href="essays/HCD 2- What are Opportunity Zones.pdf" target="_blank">Opportunity Zones</a>
+          <p>What are Opportunity Zones? Is this policy beneficial for housing and community development?</p>
         </li>
         <li>
           <a href="essays/PPD342- Policy Program Final Paper - Google Docs.pdf" target="_blank">Combating Sextortion</a>
@@ -89,7 +93,7 @@
         </li>
         <li>
           <a href="essays/Policy Memo- Improving Public Transportation in South LA - Google Docs.pdf" target="_blank">Memorandum: Improving Public Transportation in South Los Angeles</a>
-          <p>Here I outline the importance of public transportation and propose an underground subway line through the Vermont Corridor of South Los Angeles.</p>
+          <p>Here I outline the importance of public transportation for low-income households and propose an underground subway line through the Vermont Corridor in Central and South Los Angeles.</p>
         </li>
         <li>
           <a href="essays/GESM110 Final Paper.pdf" target="_blank">Photography of Urban Renewal in Bunker Hill and Chavez Ravine</a>
