--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -85,7 +85,7 @@
         </li>
         <li>
           <a href="essays/HCD 2- What are Opportunity Zones.pdf" target="_blank">Opportunity Zones</a>
-          <p>What are Opportunity Zones? Is this policy beneficial for housing and community development?</p>
+          <p>What are Opportunity Zones? Is this federal policy beneficial for housing and community development?</p>
         </li>
         <li>
           <a href="essays/PPD342- Policy Program Final Paper - Google Docs.pdf" target="_blank">Combating Sextortion</a>
