--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -80,12 +80,16 @@
       <h2>Public Policy</h2>
       <ul class="essay-list">
         <li>
+          <a href="essays/MORGAN HILL PUBLIC ART MASTER PLAN _202512121329107669.pdf" target="_blank">City of Morgan Hill Public Art Master Plan</a>
+          <p>During my development services internship at the City of Morgan Hill, I performed policy research and wrote numerous sections for the Public Art Master Plan, which establishes a clear vision and framework for public art. Adopted by the Morgan Hill City Council, the plan will guide future public art installations and investments, ensuring that public art reflects the community’s unique character and honors the past, present, and future.</p>
+        </li>
+        <li>
           <a href="essays/HCD 1- CRA and Fair Lending Policy.pdf" target="_blank">Community Reinvestment Act and Fair Lending Policies</a>
           <p>What is the Community Reinvestment Act and Fair Lending Policy? How are these policies enforced and are they effective?</p>
         </li>
         <li>
           <a href="essays/HCD 2- What are Opportunity Zones.pdf" target="_blank">Opportunity Zones</a>
-          <p>What are Opportunity Zones? Is this federal policy beneficial for housing and community development?</p>
+          <p>What are Opportunity Zones? Does this federal policy effectively address housing and community development issues?</p>
         </li>
         <li>
           <a href="essays/PPD342- Policy Program Final Paper - Google Docs.pdf" target="_blank">Combating Sextortion</a>
