--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -80,7 +80,7 @@
       <h2>Public Policy</h2>
       <ul class="essay-list">
         <li>
-          <a href="essays/MORGAN HILL PUBLIC ART MASTER PLAN _202512121329107669.pdf" target="_blank">City of Morgan Hill Public Art Master Plan</a>
+          <a href="essays/MORGAN HILL PUBLIC ART MASTER PLAN _202512121329107669.pdf" target="_blank">Public Art Master Plan- City of Morgan Hill</a>
           <p>During my development services internship at the City of Morgan Hill, I performed policy research and wrote numerous sections for the Public Art Master Plan, which establishes a clear vision and framework for public art. Adopted by the Morgan Hill City Council, the plan will guide future public art installations and investments, ensuring that public art reflects the community’s unique character and honors the past, present, and future.</p>
         </li>
         <li>
