--- a/personal_essays_site (3).html
+++ b/personal_essays_site (3).html
@@ -81,7 +81,7 @@
       <ul class="essay-list">
         <li>
           <a href="essays/MORGAN HILL PUBLIC ART MASTER PLAN _202512121329107669.pdf" target="_blank">Public Art Master Plan- City of Morgan Hill</a>
-          <p>During my development services internship at the City of Morgan Hill, I performed policy research and wrote numerous sections for the Public Art Master Plan, which establishes a clear vision and framework for public art. Adopted by the Morgan Hill City Council, the plan will guide future public art installations and investments, ensuring that public art reflects the community’s unique character and honors the past, present, and future.</p>
+          <p>During my development services internship at the City of Morgan Hill, I performed policy research and wrote numerous sections for the Public Art Master Plan. Adopted by the Morgan Hill City Council, the plan establishes a clear vision and framework for public art throughout the city, guiding future art installations and investments.</p>
         </li>
         <li>
           <a href="essays/HCD 1- CRA and Fair Lending Policy.pdf" target="_blank">Community Reinvestment Act and Fair Lending Policies</a>
